--- a/node97.html
+++ b/node97.html
@@ -101,6 +101,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION06210000000000000000">
 Getting Started</A>
 </H1>
+This is a tutorial on using 
+
+<UL>
+<LI>node.js, 
+</LI>
+<LI>coffeescript and 
+</LI>
+<LI>mongodb 
+</LI>
+</UL>
+to build a simple blog. 
+
+<P>
 Quite obviously, you’re going to need node.js and mongodb installed. I
 recommend downloading and installing from the node.js website and
 following the instructions. I will note that this tutorial covers 
@@ -206,7 +219,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11467"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11469"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
