--- a/node97.html
+++ b/node97.html
@@ -116,7 +116,10 @@ to build a simple blog.
 <P>
 Quite obviously, you’re going to need node.js and mongodb installed. I
 recommend downloading and installing from the node.js website and
-following the instructions. I will note that this tutorial covers 
+following the instructions. 
+
+<P>
+I will note that this tutorial covers 
 <PRE>
 [~/local/src/coffee]$ express --version
 4.11.2
