--- a/node97.html
+++ b/node97.html
@@ -125,11 +125,24 @@ I will note that this tutorial covers
 4.11.2
 </PRE>
 so
-if you come across this post a year from now the API might have changed
-significantly since then. You will also need mongodb installed, you can
-download it here. If you use Ubuntu (or some other Debian derivative)
-you should consider installing from their apt repository. OSX? No problem,
+if you come across this post a year from now (2015) the API might have changed
+significantly since then. 
+
+<P>
+You will also need mongodb installed.
+
+<P>
+
+<UL>
+<LI>If you use Ubuntu (or some other Debian derivative)
+you should consider installing from their apt repository. 
+
+<P>
+</LI>
+<LI>OSX? No problem,
 you can also install it via homebrew.
+</LI>
+</UL>
 
 <P>
 Finally, since we’ll be using coffeescript for this tutorial,
@@ -222,7 +235,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11469"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11471"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
