--- a/node96.html
+++ b/node96.html
@@ -116,14 +116,29 @@ James carr blog and updated 2015:
 <UL CLASS="ChildLinks">
 <LI><A NAME="tex2html2704"
   HREF="node97.html">Getting Started</A>
+<UL>
 <LI><A NAME="tex2html2705"
+  HREF="node97.html#SECTION06210010000000000000">Express generator</A>
+<LI><A NAME="tex2html2706"
+  HREF="node97.html#SECTION06210020000000000000">package.json</A>
+<LI><A NAME="tex2html2707"
+  HREF="node97.html#SECTION06210030000000000000">app.js</A>
+<LI><A NAME="tex2html2708"
+  HREF="node97.html#SECTION06210040000000000000">The Structure</A>
+<LI><A NAME="tex2html2709"
+  HREF="node97.html#SECTION06210050000000000000">Running</A>
+<LI><A NAME="tex2html2710"
+  HREF="node97.html#SECTION06210060000000000000">El módulo debug</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html2711"
   HREF="node98.html">Porting to Coffeescript</A>
 <UL>
-<LI><A NAME="tex2html2706"
+<LI><A NAME="tex2html2712"
   HREF="node98.html#SECTION06220010000000000000">Ejecución del Servidor</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2707"
+<LI><A NAME="tex2html2713"
   HREF="node99.html">Pruebas</A>
 </UL>
 <!--End of Table of Child-Links-->
