--- a/node97.html
+++ b/node97.html
@@ -265,7 +265,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11487"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11489"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -463,7 +463,19 @@ There are three folders in the root:
 </PRE>
 </LI>
 </UL>
-Apart from these existing folders and the models folder, which we need to create ourselves, we might also create folders for tests, logs, or configuration. The best thing about this structure is that
+Apart from these existing folders and the models folder, which we need to create ourselves, we might also create folders for 
+
+<UL>
+<LI>tests, 
+</LI>
+<LI>logs, or 
+</LI>
+<LI>configuration. 
+</LI>
+</UL>
+
+<P>
+The best thing about this structure is that
 it's easy to get started with and is known to most developers.
 
 <P>
