--- a/node97.html
+++ b/node97.html
@@ -325,6 +325,7 @@ This is a way to prevent accidental publication of private repositories.
 <LI>The module
 <A NAME="tex2html401"
   HREF="https://github.com/expressjs/body-parser">body-parser</A>
+provides a boyd parsing middleware
 </LI>
 <LI>The module
 <A NAME="tex2html402"
