--- a/node97.html
+++ b/node97.html
@@ -350,7 +350,7 @@ This is a way to prevent accidental publication of private repositories.
 <LI>The module
 <A NAME="tex2html402"
   HREF="https://github.com/expressjs/body-parser">body-parser</A>
-provides a boyd parsing middleware
+provides a body parsing middleware
 </LI>
 <LI>The module
 <A NAME="tex2html403"
