--- a/node97.html
+++ b/node97.html
@@ -544,6 +544,11 @@ module.exports = app;
 </PRE>
 
 <P>
+<code>app.use([path,] function [, function...])</code>
+Mounts the middleware function(s) at the path. 
+If path is not specified, it defaults to <code>"/"</code>.
+
+<P>
 
 <H4><A NAME="SECTION06210040000000000000">
 The Structure</A>
