--- a/node97.html
+++ b/node97.html
@@ -570,7 +570,11 @@ y las rutas especificadas en <code>users</code> quedan montadas en <code>users/.
 </UL>
 mientras que este middleware queda asociado con la raiz:
 <PRE>
-app.use(express.static(path.join(__dirname, 'public')));
+app.use(function(req, res, next) {
+    var err = new Error('Not Found');
+    err.status = 404;
+    next(err);
+});
 </PRE>
 
 <P>
