--- a/node97.html
+++ b/node97.html
@@ -612,6 +612,11 @@ There are three folders in the root:
     |--- index.jade
     `-- layout.jade
 </PRE>
+Where a view differs from a static resource (like an image or CSS file)
+is that a view doesn’t necessarily have to be static: the HTML can be
+constructed on the fly to provide a customized page for each request.
+
+<P>
 </LI>
 <LI>routes: This folder includes the routes (these are the equivalent controllers)
 <PRE>
