--- a/node97.html
+++ b/node97.html
@@ -617,6 +617,8 @@ is that a view doesn’t necessarily have to be static: the HTML can be
 constructed on the fly to provide a customized page for each request.
 
 <P>
+Express supports many different view engines that provide different levels of abstraction. 
+Express gives some preference to a view engine called Jade 
 </LI>
 <LI>routes: This folder includes the routes (these are the equivalent controllers)
 <PRE>
