--- a/node96.html
+++ b/node96.html
@@ -120,27 +120,29 @@ James carr blog and updated 2015:
 <LI><A NAME="tex2html2710"
   HREF="node97.html#SECTION06210010000000000000">Express generator</A>
 <LI><A NAME="tex2html2711"
-  HREF="node97.html#SECTION06210020000000000000">package.json</A>
+  HREF="node97.html#SECTION06210020000000000000">The Structure</A>
 <LI><A NAME="tex2html2712"
-  HREF="node97.html#SECTION06210030000000000000">app.js</A>
+  HREF="node97.html#SECTION06210030000000000000">package.json</A>
 <LI><A NAME="tex2html2713"
-  HREF="node97.html#SECTION06210040000000000000">El método <TT>app.use</TT></A>
+  HREF="node97.html#SECTION06210040000000000000">app.js</A>
 <LI><A NAME="tex2html2714"
-  HREF="node97.html#SECTION06210050000000000000">The Structure</A>
+  HREF="node97.html#SECTION06210050000000000000">El método <TT>app.use</TT></A>
 <LI><A NAME="tex2html2715"
-  HREF="node97.html#SECTION06210060000000000000">Running</A>
+  HREF="node97.html#SECTION06210060000000000000">Las Rutas</A>
 <LI><A NAME="tex2html2716"
-  HREF="node97.html#SECTION06210070000000000000">El módulo debug</A>
+  HREF="node97.html#SECTION06210070000000000000">Running</A>
+<LI><A NAME="tex2html2717"
+  HREF="node97.html#SECTION06210080000000000000">El módulo debug</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2717"
+<LI><A NAME="tex2html2718"
   HREF="node98.html">Porting to Coffeescript</A>
 <UL>
-<LI><A NAME="tex2html2718"
+<LI><A NAME="tex2html2719"
   HREF="node98.html#SECTION06220010000000000000">Ejecución del Servidor</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2719"
+<LI><A NAME="tex2html2720"
   HREF="node99.html">Pruebas</A>
 </UL>
 <!--End of Table of Child-Links-->
