--- a/node97.html
+++ b/node97.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2733"
+<A NAME="tex2html2734"
   HREF="node98.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2727"
+<A NAME="tex2html2728"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2721"
+<A NAME="tex2html2722"
   HREF="node96.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2729"
+<A NAME="tex2html2730"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2731"
+<A NAME="tex2html2732"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2734"
+<B> Sig:</B> <A NAME="tex2html2735"
   HREF="node98.html">Porting to Coffeescript</A>
-<B>Sup:</B> <A NAME="tex2html2728"
+<B>Sup:</B> <A NAME="tex2html2729"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2722"
+<B> Ant:</B> <A NAME="tex2html2723"
   HREF="node96.html">CoffeeScript y Express</A>
 <B> Con:</B> 
-<A NAME="tex2html2729"
+<A NAME="tex2html2730"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2731"
+<A NAME="tex2html2732"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,22 +103,24 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2735"
-  HREF="node97.html#SECTION06210010000000000000">Express generator</A>
 <LI><A NAME="tex2html2736"
-  HREF="node97.html#SECTION06210020000000000000">The Structure</A>
+  HREF="node97.html#SECTION06210010000000000000">Express generator</A>
 <LI><A NAME="tex2html2737"
-  HREF="node97.html#SECTION06210030000000000000">package.json</A>
+  HREF="node97.html#SECTION06210020000000000000">The Structure</A>
 <LI><A NAME="tex2html2738"
-  HREF="node97.html#SECTION06210040000000000000">app.js</A>
+  HREF="node97.html#SECTION06210030000000000000">package.json</A>
 <LI><A NAME="tex2html2739"
-  HREF="node97.html#SECTION06210050000000000000">El método <TT>app.use</TT></A>
+  HREF="node97.html#SECTION06210040000000000000">app.js</A>
 <LI><A NAME="tex2html2740"
-  HREF="node97.html#SECTION06210060000000000000">Las Rutas</A>
+  HREF="node97.html#SECTION06210050000000000000">El método <TT>app.use</TT></A>
 <LI><A NAME="tex2html2741"
-  HREF="node97.html#SECTION06210070000000000000">Running</A>
+  HREF="node97.html#SECTION06210060000000000000">Middleware</A>
 <LI><A NAME="tex2html2742"
-  HREF="node97.html#SECTION06210080000000000000">El módulo debug</A>
+  HREF="node97.html#SECTION06210070000000000000">Las Rutas / Routing</A>
+<LI><A NAME="tex2html2743"
+  HREF="node97.html#SECTION06210080000000000000">Running</A>
+<LI><A NAME="tex2html2744"
+  HREF="node97.html#SECTION06210090000000000000">El módulo debug</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -269,7 +271,7 @@ You should see output similar to the following:
 </PRE>
 
 <P>
-This is called <A NAME="11515"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
+This is called <A NAME="11519"></A><SPAN  CLASS="textbf">Scaffolding</SPAN>.
 
 <P>
 The idea is simple: most projects
@@ -668,7 +670,32 @@ app.use(function(req, res, next) {
 <P>
 
 <H4><A NAME="SECTION06210060000000000000">
-Las Rutas</A>
+Middleware</A>
+</H4>
+  
+
+<P>
+Middleware is a way to encapsulate functionality: 
+specifically, functionality that operates on an HTTP request to your application. 
+
+<P>
+Practically, a middleware is simply a function that
+takes three arguments: 
+
+<UL>
+<LI>a request object, 
+</LI>
+<LI>a response object, and 
+</LI>
+<LI>a 
+<FONT COLOR="#ff0000"> next</FONT> function
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION06210070000000000000">
+Las Rutas / Routing</A>
 </H4>
   
 
@@ -680,7 +707,7 @@ routed to the code that handles them</FONT>.
 
 <P>
 
-<H4><A NAME="SECTION06210070000000000000">
+<H4><A NAME="SECTION06210080000000000000">
 Running</A>
 </H4>
   
@@ -701,7 +728,7 @@ Then load <code>http://localhost:3000/</code> in your browser to access the app.
 
 <P>
 
-<H4><A NAME="SECTION06210080000000000000">
+<H4><A NAME="SECTION06210090000000000000">
 El módulo debug</A>
 </H4>
   
@@ -737,19 +764,19 @@ prefijo de nombre <code>coffeepress</code>.
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2733"
+<A NAME="tex2html2734"
   HREF="node98.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2727"
+<A NAME="tex2html2728"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2721"
+<A NAME="tex2html2722"
   HREF="node96.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2729"
+<A NAME="tex2html2730"
   HREF="node100.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2731"
+<A NAME="tex2html2732"
   HREF="node103.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -789,11 +816,11 @@ prefijo de nombre <code>coffeepress</code>.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2734"
+<B> Sig:</B> <A NAME="tex2html2735"
   HREF="node98.html">Porting to Coffeescript</A>
-<B>Sup:</B> <A NAME="tex2html2728"
+<B>Sup:</B> <A NAME="tex2html2729"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2722"
+<B> Ant:</B> <A NAME="tex2html2723"
   HREF="node96.html">CoffeeScript y Express</A>
 </DIV>
 <!--End of Navigation Panel-->
